<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#323131"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnEn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en"
            android:textColor="@color/white"
            app:strokeColor="@color/white"
            android:layout_marginStart="@dimen/dimen_16dp"
            style="?attr/materialButtonOutlinedStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/btnAr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ar"
            app:strokeColor="@color/white"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/dimen_16dp"
            style="?attr/materialButtonOutlinedStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnEn"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_layout_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_6dp"
            app:boxCornerRadiusBottomStart="@dimen/dimen_6dp"
            app:boxCornerRadiusTopEnd="@dimen/dimen_6dp"
            app:boxCornerRadiusTopStart="@dimen/dimen_6dp"
            app:boxStrokeColor="@color/teal_200"
            app:boxStrokeWidth="@dimen/dimen_1dp"
            app:boxStrokeWidthFocused="@dimen/dimen_2dp"
            app:endIconTint="@color/teal_200"
            app:hintEnabled="false"
            app:endIconMode="clear_text"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintWidth_percent="0.7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cairo_bold"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="15"
                android:nextFocusDown="@+id/edt_password"
                android:paddingStart="@dimen/dimen_16dp"
                android:paddingTop="@dimen/dimen_8dp"
                android:paddingEnd="@dimen/dimen_16dp"
                android:paddingBottom="@dimen/dimen_8dp"
                android:singleLine="true"

                android:textAlignment="viewStart"
                android:textColor="@color/teal_200"
                android:textColorHint="@color/teal_200"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:theme="@style/TextLabel"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_6dp"
            app:boxCornerRadiusBottomStart="@dimen/dimen_6dp"
            app:boxCornerRadiusTopEnd="@dimen/dimen_6dp"
            app:boxCornerRadiusTopStart="@dimen/dimen_6dp"
            app:boxStrokeColor="@color/teal_200"
            app:boxStrokeWidth="@dimen/dimen_1dp"
            app:boxStrokeWidthFocused="@dimen/dimen_2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/teal_200"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_layout_phone"
            app:layout_constraintWidth_percent="0.7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cairo_bold"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLength="15"
                android:nextFocusDown="@+id/edt_email"
                android:paddingStart="@dimen/dimen_16dp"
                android:paddingTop="@dimen/dimen_8dp"
                android:paddingEnd="@dimen/dimen_16dp"
                android:paddingBottom="@dimen/dimen_8dp"
                android:singleLine="true"

                android:textAlignment="viewStart"
                android:textColor="@color/teal_200"
                android:textColorHint="@color/teal_200"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:backgroundTint="@color/teal_200"

            android:fontFamily="@font/cairo_bold"

            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="@dimen/dimen_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_layout_password"
            app:layout_constraintWidth_percent="0.4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"

            android:fontFamily="@font/cairo_bold"

            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="@dimen/dimen_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>